@@ -40,3 +40,9 @@
 - I fell behind on this changelog. I am sure I am forgetting stuff; I haven't been working all that much on the compiler,
   but there have been some significant changes.
 --------------------------------------------------------------------------------------------------------------------
+
+
+-------- (toolateralus) 7/7/2025, 10:46:02 AM ----------------------------------------------------------------------
+- Added back explicit casting any pointer type to any other pointer type. this is needed for many low level memory reinterpretations,
+  and casting to *void or *u8 just to cast back out is insanely clunky and makes worse code, not safer.
+--------------------------------------------------------------------------------------------------------------------
